<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="363dp"
        android:layout_height="363dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/board"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">


        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/first_square"
            android:onClick="newPlay"
            android:tag="0" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/second_square"
            android:onClick="newPlay"
            android:tag="1" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/third_square"
            android:onClick="newPlay"
            android:tag="2" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/fourth_square"
            android:onClick="newPlay"
            android:tag="3" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/fifth_square"
            android:onClick="newPlay"
            android:tag="4" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/sixth_square"
            android:onClick="newPlay"
            android:tag="5" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/seventh_square"
            android:onClick="newPlay"
            android:tag="6" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/eighth_square"
            android:onClick="newPlay"
            android:tag="7" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="91dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ninth_square"
            android:onClick="newPlay"
            android:tag="8" />


    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginRight="138dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="12dp"
        android:text="@string/winner_text_view"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:visibility="invisible"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerTextView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/volumeImageView"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/volume_on_off_button"
        android:onClick="volumeControl"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/winnerTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_volume_up_black_36dp" />
</android.support.constraint.ConstraintLayout>